chore(api): fix Docker restore by copying referenced csproj files

--- a/TechNewsApi/Dockerfile
+++ b/TechNewsApi/Dockerfile
@@ -2,8 +2,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copy csproj first for better layer caching
+# Copy csproj files first (for caching + restore)
 COPY ["TechNewsApi/TechNewsApi.csproj", "TechNewsApi/"]
+COPY ["TechNewsCore/TechNewsCore.csproj", "TechNewsCore/"]
 
 # Restore
 RUN dotnet restore "TechNewsApi/TechNewsApi.csproj"
@@ -17,10 +18,8 @@ RUN dotnet publish "TechNewsApi/TechNewsApi.csproj" -c Release -o /app/publish -
 # ---------- runtime stage ----------
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-
-# Render sets PORT; ASP.NET must listen on it
-ENV ASPNETCORE_URLS=http://0.0.0.0:${PORT}
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://0.0.0.0:8080
 
 COPY --from=build /app/publish .
-
 ENTRYPOINT ["dotnet", "TechNewsApi.dll"]
