--- a/tech_news_app/pubspec.yaml
+++ b/tech_news_app/pubspec.yaml
@@ -39,11 +39,14 @@ dependencies:
   google_sign_in: ^6.1.0
   flutter_secure_storage: ^9.0.0
   youtube_player_flutter: ^9.1.3
-  webview_flutter: ^4.8.0
+
   package_info_plus: ^8.0.2
+  
 
   # ✅ ADD THIS
-  url_launcher: ^6.2.6
+  webview_flutter: ^4.10.0
+  youtube_player_iframe: ^5.2.0
+  url_launcher: ^6.3.0
   
 dev_dependencies:
   flutter_test:
