--- a/tech_news_app/ios/Runner/GoogleService-Info.plist
+++ b/tech_news_app/ios/Runner/GoogleService-Info.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>379189948307-v8n135udgl3iouq7itko0lj00ch9q2e3.apps.googleusercontent.com</string>
+	<string>379189948307-q5lp1gqngrceoult6nbb6k9p8cjpq2lb.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.379189948307-v8n135udgl3iouq7itko0lj00ch9q2e3</string>
+	<string>com.googleusercontent.apps.379189948307-q5lp1gqngrceoult6nbb6k9p8cjpq2lb</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.techNewsApp</string>
+	<string>com.wargalstudio.wargalnews</string>
 </dict>
 </plist>
